force-app/main/default/objects/Job_Application__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Integration will add value to this field.</description>
    <label>CompanyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>