force-app/main/default/objects/Job_Application__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed information about the job, such as responsibilities, qualifications, benefits, etc.</description>
    <label>Description</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>