force-app/main/default/objects/Job_Application__c/fields/Estimated_Federal_Taxes_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Federal_Taxes_Yearly__c</fullName>
    <description>Stores the estimated yearly federal income tax amount.</description>
    <label>Estimated Federal Taxes Yearly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>