force-app/main/default/objects/Job_Application__c/fields/Estimated_Medicare_Withholding_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Medicare_Withholding_Yearly__c</fullName>
    <label>Estimated Medicare Withholding Yearly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>