force-app/main/default/objects/Job_Application__c/fields/Estimated_Social_Security_Tax_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Social_Security_Tax_Yearly__c</fullName>
    <label>Estimated Social Security Tax Yearly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>