force-app/main/default/objects/Job_Application__c/fields/Estimated_Take_Home_Pay_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Take_Home_Pay_Yearly__c</fullName>
    <label>Estimated Take Home Pay Yearly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>